@@ -512,6 +512,9 @@ Use ``ovsdb-tool create-cluster`` to create a clustered database from the
 contents of a standalone database.  Use ``ovsdb-tool backup`` to create a
 standalone database from the contents of a clustered database.
 
+Use ``ovsdb-tool cluster-to-standalone`` to convert clustered database to
+standalone database when the cluster is down and cannot be revived.
+
 Upgrading or Downgrading a Database
 -----------------------------------
 
